# PCC_Processing_Design

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  MainProcessingTool.cpp  Quick Start Manual.docx  README.md  README_draft.txt  TechnicalManual.docx  TheoreticalManual.docx  build.ninja  cmake_install.cmake  config.txt  config_main.txt  main.cpp  main_StrDesign.cpp  ~$chnicalManual.docx  ~$eoreticalManual.docx
.github/workflows/: build.yml
Cell_Comlex_examples/1000Cells_DCC/: A0.txt  A1.txt  A2.txt  B1.txt  B2.txt  B3.txt  n1000-id1.tess  number_of_cells.txt
Cell_Comlex_examples/100Cells_DCC/: A0.txt  A1.txt  A2.txt  A3.txt  B1.txt  B2.txt  B3.txt  n100-id1.tess  normals.txt  number_of_cells.txt  seeds.txt
Cell_Comlex_examples/10Cells_DCC/: A0.txt  A2.txt  B1.txt  B2.txt  B3.txt  n10-id1.tess  number_of_cells.txt
Cell_Comlex_examples/500Cells_DCC/: A0.txt  A1.txt  A2.txt  B1.txt  B2.txt  B3.txt  n500-id1.tess  number_of_cells.txt
DCC_Characterisation/: TJsLab.h
DCC_Kinetic/: DCCKinetic.h
DCC_Section/: DCC_Plane_cut.h
DCC_Writer/: DCC_Writer.h  Writer_Functions.h
PCC_examples/V100_Cuboid/: A0.txt  A1.txt  A2.txt  A3.txt  B1.txt  B2.txt  B3.txt  L1.txt  L2.txt  face_areas.txt  face_normals.txt  grain_seeds.txt  grain_volumes.txt  n100-id131.tess  vertex_seeds.txt  voro_Ncells.txt
PCC_examples/Voronoi_1k/: polyhedron_seeds.txt  vertex_coordinates.txt
PCC_sources/Voronoi_1k/: PCC_annotation.txt
config/: characterisation.ini  main.ini  main0.txt  main_2D.ini  multiphysics.ini  processing.ini  writer.ini
config/2D_case/: processing_2D.ini
config/arch/: main.ini
database/: materials.ini
simulation_taks/01_large_crack_growth/: data_multiphysics.txt
src/: DCCKinetic.h  DCCProcessing.h  DCC_SupportFunctions.h  FaceLaplacians.h  TJsLab.h  main.cpp
src/DCCCharacterisation/: FaceLaplacians.h  LaplaciansLab.h  StructureCharacterisation.h  TJsLab.h
src/DCCKinetic/: DCCKinetic.h  Kinetic_Functions.h
src/DCCProcessing/: DCCProcessing.h  Processing_Functions.h
src/DCC_Kinetic/: DCCKinetic.h  (+2 more)
(+88 files in other folders)
